@@ -36,16 +36,16 @@ test.subdir('test')
 
 test.write_passing_test(['test', 'pass.py'])
 
-# NOTE:  The "test.pass   : PASS" line has spaces at the end.
+# NOTE:  The "test/pass.py   : PASS" line has spaces at the end.
 
-expect = r"""qmtest.py run --output baseline.qmr --format none --result-stream=scons_tdb.AegisBaselineStream test.pass
+expect = r"""qmtest.py run --output baseline.qmr --format none --result-stream=scons_tdb.AegisBaselineStream test/pass.py
 --- TEST RESULTS -------------------------------------------------------------
 
-  test.pass                                     : PASS    
+  test/pass.py                                  : PASS    
 
 --- TESTS WITH UNEXPECTED OUTCOMES -------------------------------------------
 
-  test.pass                                     : PASS    
+  test/pass.py                                  : PASS    
 
 
 --- STATISTICS ---------------------------------------------------------------
@@ -53,6 +53,6 @@ expect = r"""qmtest.py run --output baseline.qmr --format none --result-stream=s
        1 (100%) tests unexpected PASS
 """
 
-test.run(arguments = '--qmtest -b . test.pass', stdout = expect)
+test.run(arguments = '--qmtest -b . test/pass.py', stdout = expect)
 
 test.pass_test()
